WE'RE IN IT NOW WE'RE HERE

--- a/FlightLine.App/src/app/app.component.html
+++ b/FlightLine.App/src/app/app.component.html
@@ -1,2 +1,5 @@
-<div style="font-size: 200px; color: red; background-color: blue; border: 10px greenyellow groove;">TEST TEST BITCH
+<div style="font-size: 200px; color: red; background-color: blue; border: 10px greenyellow groove;">BITCHES CALL ME THE FLIGHT LINE
+</div>
+<br/>
+<div style="font-size: 200px; color: red; background-color: blue; border: 10px greenyellow groove;">THE WAY I GOT THESE BIRDS
 </div>
