components, routing, header

--- a/FlightLine.App/src/app/app.component.html
+++ b/FlightLine.App/src/app/app.component.html
@@ -1,5 +1,10 @@
-<div style="font-size: 200px; color: red; background-color: blue; border: 10px greenyellow groove;">BITCHES CALL ME THE FLIGHT LINE
+<div class="header">
+    <div style="position:relative; height: 100%; width: 100%;">
+        <img class="header-logo" src="../assets/erau-logo.png">
+        <img class="header-logo" src="../assets/swag.gif">
+    </div>
 </div>
-<br/>
-<div style="font-size: 200px; color: red; background-color: blue; border: 10px greenyellow groove;">THE WAY I GOT THESE BIRDS
+
+<div class="app-body">
+    <router-outlet></router-outlet>
 </div>
