--- a/FlightLine.App/src/app/app.component.scss
+++ b/FlightLine.App/src/app/app.component.scss
@@ -17,7 +17,7 @@
     left: 0;
     right: 0;
     top: 58px;
-    background-image: radial-gradient(white, #ececec);
+    background-color: white;
 }
 
 .header-logo {
