--- a/FlightLine.App/src/app/monitoring/monitoring.component.scss
+++ b/FlightLine.App/src/app/monitoring/monitoring.component.scss
@@ -1,4 +1,4 @@
-.patients-grid {
+.forms-grid {
     height: 100%;
     width: 100%;
     display: grid;
@@ -8,6 +8,7 @@
 
 .search-form {
     display: inline-block;
+    float: right;
 }
 
 .search-field {
@@ -15,29 +16,12 @@
     margin-top: 14px;
 }
 
-.add-button {
-    float: right;
-    background-color: #ff4f4f;
-    color: white;
-    border-radius: 4px;
-    margin-top: 20px;
-    margin-right: 20px;
-    padding-right: 10px;
-    -webkit-filter: drop-shadow(2px 2px 2px #222222a1);
-    filter: drop-shadow(2px 2px 2px #222222a1);
-    transition: .25s;
-}
-
-.add-button:hover {
-    background-color: #ff6767be;
-}
-
-.patient-block {
+.form-block {
     position: relative;
 }
 
-.patient-table {
-    background-color: #e2e2e2;
+.form-table {
+    background-color: #ececec;
     position: absolute;
     top: 10px;
     left: 20px;
@@ -49,42 +33,42 @@
     filter: drop-shadow(2px 2px 2px #222222a1);
 }
 
-.patient-relative-wrapper {
+.form-relative-wrapper {
     position: relative;
     height: 100%;
     width: 100%;
 }
 
-.patient-header {
-    grid-template-columns: 1fr 1fr 1fr 1fr 2fr 1em !important;
+.form-header {
+    grid-template-columns: 1fr 2fr 1fr 1em !important;
 }
 
-.patient-header div {
-    background-color: #ff4f4f !important;
+.form-header div {
+    background-color: #03539e !important;
     color: white !important;
     font-weight: bold;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
 
-.patient-row {
+.form-row {
     position: relative;
     display: grid;
     height: min-content;
     width: 100%;
     grid-template-rows: min-content;
-    grid-template-columns: 1fr 1fr 1fr 1fr 2fr;
+    grid-template-columns: 1fr 2fr 1fr;
     column-gap: 3px;
     margin-bottom: 3px;
 }
 
-.patient-row div {
+.form-row div {
     padding: 5px;
     min-width: none;
     background-color: #ffffff;
 }
 
-.patient-scroll-container {
+.form-scroll-container {
     position: absolute;
     top: 33px;
     left: 0;
@@ -97,21 +81,21 @@
     border-bottom-left-radius: 4px;
 }
 
-.patient-scroll-container::-webkit-scrollbar {
+.form-scroll-container::-webkit-scrollbar {
     width: 1em;
 }
 
-.patient-scroll-container::-webkit-scrollbar-thumb {
+.form-scroll-container::-webkit-scrollbar-thumb {
     background-color: #c6c4c4;
     border: 1px solid white;
     border-bottom-right-radius: 4px;
 }
 
-.patient-scroll-container::-webkit-scrollbar-track {
+.form-scroll-container::-webkit-scrollbar-track {
     border-bottom-right-radius: 4px;
 }
 
-.patient-row div.clickrow {
+.form-row div.clickrow {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -121,7 +105,7 @@
     transition: .2s;
 }
 
-.patient-row div.clickrow:hover {
-    background: #ff676751;
+.form-row div.clickrow:hover {
+    // background: #ff676751;
     cursor: pointer;
 }
