--- a/FlightLine.App/src/app/monitoring/monitoring.component.scss
+++ b/FlightLine.App/src/app/monitoring/monitoring.component.scss
@@ -12,8 +12,8 @@
 }
 
 .search-field {
-    margin-left: 20px;
-    margin-top: 14px;
+    margin-top: 10px;
+    margin-right: 20px;
 }
 
 .form-block {
@@ -40,7 +40,7 @@
 }
 
 .form-header {
-    grid-template-columns: 1fr 2fr 1fr 1em !important;
+    grid-template-columns: 2fr 3fr 215px 1em !important;
 }
 
 .form-header div {
@@ -57,7 +57,7 @@
     height: min-content;
     width: 100%;
     grid-template-rows: min-content;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 2fr 3fr 215px;
     column-gap: 3px;
     margin-bottom: 3px;
 }
@@ -95,17 +95,26 @@
     border-bottom-right-radius: 4px;
 }
 
-.form-row div.clickrow {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: rgba(0, 0, 0, 0);
-    transition: .2s;
+.forms-title {
+    display: inline-block;
+    margin-left: 20px;
+    margin-top: 28px;
+    font-weight: bold;
+    font-size: 23px;
+    color: #03539e;
+    -webkit-filter: drop-shadow(5px 5px 5px #00000059);
+    filter: drop-shadow(5px 5px 5px #00000059);
 }
 
-.form-row div.clickrow:hover {
-    // background: #ff676751;
-    cursor: pointer;
+.action-button {
+    border-radius: 4px;
+    background-color: #03539e;
+    color: white;
+    margin-right: 3px;
+    margin-left: 3px;
+    height: 35px;
+    width: 35px;
+    padding: 5.5px 1px 0 0px;
+    -webkit-filter: drop-shadow(5px 5px 5px #00000059);
+    filter: drop-shadow(5px 5px 5px #00000059);
 }
