logo, data loading, color coding, account dialog

--- a/FlightLine.App/src/app/app.component.html
+++ b/FlightLine.App/src/app/app.component.html
@@ -1,7 +1,11 @@
 <div class="header">
     <div style="position:relative; height: 100%; width: 100%;">
         <img class="header-logo" src="../assets/erau-logo.png">
-        <img class="header-logo" src="../assets/swag.gif">
+        <div class="app-title">Checkride Application System</div>
+        <button mat-icon-button class="profile-button" matTooltip="Account" matTooltipPosition="left"
+            matTooltipShowDelay="400" (click)="openAccount()">
+            <i class="material-icons">account_circle</i>
+        </button>
     </div>
 </div>
 
