--- a/FlightLine.App/src/app/monitoring/monitoring.component.html
+++ b/FlightLine.App/src/app/monitoring/monitoring.component.html
@@ -3,7 +3,7 @@
         <div class="forms-title">Checkride Forms</div>
         <form class="search-form">
             <mat-form-field class="search-field" style="margin-right: 10px;">
-                <mat-label>Filter Forms</mat-label>
+                <mat-label>Filter By Status</mat-label>
                 <mat-select>
                     <mat-option value="none">None</mat-option>
                     <mat-option value="new">New</mat-option>
@@ -12,7 +12,7 @@
                 </mat-select>
             </mat-form-field>
             <mat-form-field class="search-field">
-                <mat-label>Search Forms</mat-label>
+                <mat-label>Search By Name</mat-label>
                 <input matInput>
                 <mat-icon matSuffix>search</mat-icon>
             </mat-form-field>
@@ -29,11 +29,12 @@
                     <div style="border-top-right-radius: 4px;"></div>
                 </div>
                 <div class="form-scroll-container">
-                    <!-- *ngFor="let form of filteredForms" -->
-                    <div>
-                        <div class="form-row animated fadeInUp">
-                            <div>asdf</div>
-                            <div>asdf</div>
+                    <div *ngFor="let form of filteredForms">
+                        <div class="form-row animated fadeInUp" [ngClass]="{'new-form' : form.status === 'new', 
+                            'pending-form' : form.status === 'pending', 
+                            'completed-form' : form.status === 'completed'}">
+                            <div class="row-spine">{{form.studentName}}</div>
+                            <div>{{form.details}}</div>
                             <div>
                                 <button mat-icon-button class="action-button" matTooltip="Fill Out and Submit"
                                     matTooltipPosition="below" matTooltipShowDelay="0">
