user types, search func, add form button

--- a/FlightLine.App/src/app/account-dialog/account-dialog.component.html
+++ b/FlightLine.App/src/app/account-dialog/account-dialog.component.html
@@ -11,7 +11,7 @@
     </div>
   
     <div class="profile-logout">
-      <button mat-button class="text-button" style="display: inline-block; margin-top: 2px;">Log Out</button>
+      <button mat-button class="text-button" style="display: inline-block; margin-top: 2px;" (click)="logout()">Log Out</button>
     </div>
   
     <div class="profile-email">
