--- a/FlightLine.App/src/app/monitoring/monitoring.component.html
+++ b/FlightLine.App/src/app/monitoring/monitoring.component.html
@@ -49,7 +49,7 @@
                                     <i class="material-icons">edit_square</i>
                                 </button>
                                 <button mat-icon-button class="action-button" matTooltip="Approve"
-                                    matTooltipPosition="below" matTooltipShowDelay="0"
+                                    matTooltipPosition="below" matTooltipShowDelay="0" (click)="openApproval(form)"
                                     *ngIf="(userService.currentUser === 'TM') || (userService.currentUser === 'RO') || (userService.currentUser === 'ADMIN')">
                                     <i class="material-icons">done_all</i>
                                 </button>
