--- a/FlightLine.App/src/app/approval/approval.component.html
+++ b/FlightLine.App/src/app/approval/approval.component.html
@@ -7,7 +7,7 @@
         <div class="approval-title">Form Approval</div>
     </div>
     <div class="form-container">
-        <img src="../../../assets/brandon.gif" class="placeholder-gif">
+        <!-- <img src="../../../assets/brandon.gif" class="placeholder-gif"> -->
     </div>
     <div class="approval-subgrid-lol">
         <div class="center-items">
