--- a/FlightLine.App/src/app/monitoring/monitoring.component.html
+++ b/FlightLine.App/src/app/monitoring/monitoring.component.html
@@ -11,7 +11,7 @@
         <form class="search-form">
             <mat-form-field class="search-field">
                 <mat-label>Filter By Status</mat-label>
-                <mat-select [formControl]="statusSearchControl">
+                <mat-select [formControl]="statusSearchControl" multiple>
                     <mat-option value="none">None</mat-option>
                     <mat-option value="new">New</mat-option>
                     <mat-option value="pending">Pending</mat-option>
@@ -38,8 +38,10 @@
                 <div class="form-scroll-container">
                     <div *ngFor="let form of filteredForms">
                         <div class="form-row animated fadeInUp" [ngClass]="{'new-form' : form.status === 'new', 
-                            'pending-form' : form.status === 'pending', 
-                            'completed-form' : form.status === 'completed'}">
+                            'partial-form' : form.status === 'partially approved', 
+                            'full-form' : form.status === 'fully approved',
+                            'scheduled-form' : form.status === 'scheduled',
+                            'archived-form' : form.status === 'archived'}">
                             <div class="row-spine">{{form.studentName}}</div>
                             <div class="bold-item">{{form.formatStatus}}</div>
                             <div class="button-box">
