advanced filter, new statuses, default filters

--- a/FlightLine.App/src/app/account-dialog/account-dialog.component.html
+++ b/FlightLine.App/src/app/account-dialog/account-dialog.component.html
@@ -19,7 +19,7 @@
     </div>
   
     <div class="profile-staff-code">
-      <div class="info">Administrator</div>
+      <div class="info">{{displayUser}}</div>
     </div>
   
   </div>
