--- a/FlightLine.App/src/app/monitoring/monitoring.component.html
+++ b/FlightLine.App/src/app/monitoring/monitoring.component.html
@@ -9,13 +9,14 @@
             </mat-form-field>
         </form>
         <form class="search-form">
-            <mat-form-field class="search-field">
+            <mat-form-field class="search-field" style="width: 205px;">
                 <mat-label>Filter By Status</mat-label>
-                <mat-select [formControl]="statusSearchControl" multiple>
-                    <mat-option value="none">None</mat-option>
+                <mat-select [formControl]="statusSearchControl" multiple [ngModel]="statusSearch">
                     <mat-option value="new">New</mat-option>
-                    <mat-option value="pending">Pending</mat-option>
-                    <mat-option value="completed">Completed</mat-option>
+                    <mat-option value="partially approved">Partially Approved</mat-option>
+                    <mat-option value="fully approved">Fully Approved</mat-option>
+                    <mat-option value="scheduled">Scheduled</mat-option>
+                    <mat-option value="archived">Archived</mat-option>
                 </mat-select>
             </mat-form-field>
         </form>
