gettin them grids goin boi

--- a/FlightLine.App/src/app/availability/availability.component.html
+++ b/FlightLine.App/src/app/availability/availability.component.html
@@ -1,1 +1,13 @@
-<p>availability works!</p>
+<!-- animated fadeIn -->
+<div class="av-grid">
+    <div>
+        <button mat-button class="back-button" (click)="goBack()">
+            <i class="material-icons">arrow_back_ios</i>
+            Back
+        </button>
+        <div class="av-title">Student Availability</div>
+    </div>
+    <div class="calendar-container">
+        <div class="calendar-grid"></div>
+    </div>
+</div>
