--- a/FlightLine.App/src/app/availability/availability.component.scss
+++ b/FlightLine.App/src/app/availability/availability.component.scss
@@ -32,14 +32,93 @@
 .calendar-grid {
     position: absolute;
     top: 10px;
-    bottom: 10px;
+    bottom: 0;
     left: 20px;
     right: 20px;
 
     display: grid;
-    // AAAAAAAAAAAAAAA 
+    grid-template-columns: 1fr;
+    grid-template-rows: 60px 1fr;
+    gap: 1px 1px;
+
+    background-color: #b5b5b5;
 }
 
 .calendar-container {
     position: relative;
+}
+
+.day-labels-grid {
+    background-color: white;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 65px 1px 1fr 1px 1fr 1px 1fr 1px 1fr 1px 1fr 1px 1fr 1px 1fr 8px 6px;
+}
+
+.day-divider {
+    border-bottom: #b5b5b5 solid 25px;
+}
+
+.day-box {
+    text-align: center;
+    padding-top: 10px;
+    font-weight: bold;
+    font-size: larger;
+    color: #5e5e5e;
+}
+
+.calendar-scroll-grid {
+    display: grid;
+    grid-template-columns: 65px 1fr 1fr 1fr 1fr 1fr 1fr 1fr 7px;
+    grid-template-rows: 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px;
+    gap: 1px 1px;
+    overflow-y: scroll;
+}
+
+.legend-bar {
+    background-color: white;
+    grid-area: 1 / 1 / span 24 / span 1;
+    display: grid;
+    
+}
+
+.hour-filler {
+    background-color: white;
+}
+
+.scroll-spacer {
+    background-color: white;
+    grid-area: 1 / 9 / span 24 / span 1;
+}
+
+.top-scroll-spacer {
+    background-color: white;
+    grid-area: 1 / 16 / span 1 / span 2;
+}
+
+.horizontal-sussy-overlapper {
+    width: 1px;
+    height: 100%;
+    margin-left: -1px;
+    background-color: white;
+}
+
+.vertical-sussy-overlapper {
+    width: 100%;
+    height: 100%;
+    margin-top: 1px;
+    background-color: white;
+}
+
+.calendar-scroll-grid::-webkit-scrollbar {
+    width: 6px;
+}
+
+.calendar-scroll-grid::-webkit-scrollbar-thumb {
+    background-color: #b5b5b5;
+    border-radius: 3px;
+}
+
+.calendar-scroll-grid::-webkit-scrollbar-track {
+    background-color: white;
 }
